# outlook-local-ai

.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
add-in/: manifest.json  manifest.xml  package-lock.json  package.json  tsconfig.json  webpack.config.js
add-in/src/searchandchat/: index.tsx  searchandchat.html
add-in/src/searchandchat/components/: App.tsx  SearchAndChat.tsx  SearchAndChatApp.tsx
add-in/src/taskpane/: App.tsx  index.tsx  taskpane.ts  types.ts
add-in/src/taskpane/apiClient/: index.ts
add-in/src/taskpane/apiClient/ai/: index.ts  schema.ts
add-in/src/taskpane/apiClient/shared/: index.ts
add-in/src/taskpane/apiClient/tags/: index.ts  schema.ts
add-in/src/taskpane/apiClient/vectorStore/: index.ts  schema.ts
add-in/src/taskpane/components/: Modal.tsx
add-in/src/taskpane/feature/: getMailBody.ts  getMailItemId.ts
add-in/src/taskpane/hooks/: useFetch.ts
add-in/src/taskpane/pages/: chat.tsx  knowledge.tsx  search.tsx
add-in/src/taskpane/styles/: App.styles.ts  chat.style.ts  knowledge.style.ts  search.style.ts
docs/: new_feature.md  search_system.md  semantic_expansion_plan.md
docs/log/: concept_vector_store_requirements.md  mail_chunking_20251203.md  phase0_20251202.md
server/: .gitignore  .ruff.toml  pyproject.toml  pyrightconfig.json
server/app/: app_conf.py  app_resource.py  main.py
server/app/dtos/: ai.py  common.py  vector_store.py
server/app/models/: __init__.py  _models.py
server/app/models/migration/: env.py
server/app/models/migration/versions/: 022d7c825aaf_init_tables.py  1c134baba1eb_add_mail_ids_table.py  bca25a6b931a_add_concept_model.py
server/app/routers/: ai.py  tags.py  vector_store.py
server/app/services/ai/model/: __init__.py  base.py  chat_model.py  embedding_model.py  ner_model.py
server/app/services/ai/ner/: __init__.py  extract_top_words.py
server/app/services/ai/rag/: __init__.py  agent.py  vector_mail.py  vector_store.py
server/app/services/ai/shared/: __init__.py  base_graph.py
server/app/services/ai/summarize/: __init__.py  agent.py
server/app/services/database/: operation.py
server/app/services/vector_store/concept/: __init__.py  seed.py  vector_store.py
server/app/services/vector_store/mail/: __init__.py  splitter.py  vector_mail.py  vector_store.py
server/app/services/vector_store/shared/: __init__.py  ruri_prefix.py  vector_store.py
server/app/utils/logging/: __init__.py  _get_logger.py
