[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pyright>=1.1.407",
    "ruff>=0.14.5",
    "taskipy>=1.14.1",
    "uvicorn>=0.38.0",
]

[tool.taskipy.tasks]
dev = "cd app && uv run uvicorn main:app --reload"
fmt = "uv run ruff check --fix && uv run ruff format"
type = "uv run pyright app"
