[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "chromadb>=1.3.5",
    "datasets>=4.4.1",
    "fastapi>=0.121.3",
    "huggingface-hub[hf-xet]>=0.34.4",
    "langchain>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-openvino-genai",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=0.6.6",
    "optimum[nncf,openvino]>=1.27.0",
    "pydantic>=2.12.4",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pyright>=1.1.407",
    "ruff>=0.14.5",
    "taskipy>=1.14.1",
    "uvicorn>=0.38.0",
]

[tool.taskipy.tasks]
migration = "alembic upgrade head"
dev = "uv run uvicorn app.main:app --reload"
fmt = "uv run ruff check --fix && uv run ruff format"
type = "uv run pyright app"

[tool.uv.sources]
langchain-openvino-genai = { git = "https://github.com/KTC-Security-Circle/langchain-openvino-genai" }
